Use proper weak refs over raw pointers to hold parent URI content listeners. b=144887 r=radha@netscape.com sr=alecf@netscape.com